# mrover-esw

./: .clang-format-ignore  .gitignore  .gitmodules  .project  404.html  Dockerfile.arm-gnu  README.md  arduino_read.ino  ci.json  dynamixelSetID.ino  index.html  justfile  mkdocs.yml  search.html  zensical.toml
.github/workflows/: ci.yml  docker.yml  release.yml  site.yml
arduino_read/: arduino_read.ino
config/: abs.yaml  bmc.yaml  lim.yaml  pdb.yaml  pdlb.yaml
configs/: bmc.yaml  new_bmc.yaml  test.yaml
configs/config_gen/: gen_bmc.yaml
configs/drive/: front_left.cfg  front_right.cfg  middle_right.cfg
configs/ra/: gripper.yaml  joint_b.yaml
dbc/: CANBus1.dbc  MRoverCAN.dbc  dbc_parser.py
docs/: README.md  index.md
docs/extra/: build-docs.md
docs/getting-started/: intro.md
docs/headers/: hardware.md
docs/info/: brushed.md  brushless.md  cmake-tools.md  communication-protocols.md  dynamixel.md  timers.md  wizard.md
docs/projects/: overview26.md
dynamixelSetID/: dynamixelSetID.ino
extra/archive/: index.html
extra/cmake-cubemx/: index.html
getting-started/intro/: index.html
getting-started/stm32cube/: index.html
getting-started/stm32cubeide/: index.html
headers/hardware/: index.html
info/archive/: index.html
info/brushed/: index.html
info/brushless/: index.html
info/cmake-tools/: index.html
info/communication-protocols/: index.html
info/nucleos/: index.html
info/science/: index.html
info/stm32-boot/: index.html
info/timers/: index.html
lib/: CMakeLists.txt  fdcan.hpp  limit_switch.hpp  pin.hpp
lib/Inc/: hardware.hpp  hardware_i2c.hpp
lib/config/: CMakeLists.txt
lib/config/templates/: config_header.hpp.j2
lib/config_gen/: CMakeLists.txt
lib/config_gen/templates/: config_header.hpp.j2
lib/dbc/: CMakeLists.txt  can_header_gen.py  dbc_header.h  dbc_header.h.j2  dbc_jinja2_test.py  dbc_parser.py  header_test  header_test.cpp  release.CMakeLists.txt  science_test.h
lib/dbc/runtime/: CMakeLists.txt
lib/dbc/runtime/include/: dbc.hpp  file_parser.hpp  frame_processor.hpp  message.hpp  signal.hpp
lib/dbc/runtime/src/: file_parser.cpp  frame_processor.cpp  message.cpp  signal.cpp
lib/dbc/runtime/tests/: CMakeLists.txt  MRoverCAN.dbc  science_test.dbc  test.cpp
lib/dbc/templates/: dbc_header.h.j2  dbc_header.hpp.j2
lib/dbcs/: README.md
lib/hw/: CMakeLists.txt  README.md
lib/hw/Inc/: as5047u.hpp  hbridge.hpp
lib/hw/Src/: as5047u.cpp  hbridge.cpp
lib/influxdb/: CMakeLists.txt
lib/influxdb/Inc/: influxdb.hpp
lib/linux/: CMakeLists.txt  main  main.cpp
lib/linux/Inc/serial/: serial.hpp
lib/messaging/: messaging_science.hpp
lib/stm32/: CMakeLists.txt
lib/stm32/Inc/: adc.hpp  cordic.hpp  hardware.hpp  sys.hpp  timer.hpp
lib/stm32/Inc/hw/: ad8418a.hpp  analog_pin.hpp  as5047u.hpp  flash.hpp  hbridge.hpp  limit_switch.hpp  pin.hpp  quadrature.hpp
lib/stm32/Inc/messaging/: messaging_science.hpp
lib/stm32/Inc/serial/: debug.hpp  fdcan.hpp  smbus.hpp  spi.hpp  uart.hpp
lib/stm32/Src/hw/: hbridge.cpp  quadrature.cpp
lib/stm32g4/: CMakeLists.txt
lib/stm32g4/templates/: CMakeLists.txt.j2
lib/util/: CMakeLists.txt
lib/util/Inc/: filtering.hpp  logger.hpp  pidf.hpp  util.hpp
lib/yaml/: CMakeLists.txt
projects/overview26/: index.html
rover/: bmc.yaml
rover/cm/: mast_limit.yaml
rover/mob/: back_left.cfg  back_right.cfg  backup.cfg  middle_left.cfg
rover/ra/: abs_de_pitch.yaml  abs_de_roll.yaml  gripper.yaml  joint_a.cfg  joint_b.yaml  joint_c.cfg  joint_de_0.cfg  joint_de_1.cfg  pusher.yaml
rover/sp/: auger.yaml  linear_actuator.yaml
scripts/: build.sh  fdcanusb.sh  flash.sh  new.sh  style.sh
search/: search_index.json
src/: accel_data.csv  accel_scipt.py  serial.py  serial_port_wip.cpp  serial_servo  serial_servo.cpp
src/3bm/: README.md
src/HX8357_G431RB/: .cproject  .mxproject  .project  HX8357_G431RB.ioc
src/HX8357_HAL_SMT32F303/: .cproject  .mxproject  .project  HX8357_DEMO.ioc
src/abs/: CMakeLists.txt  abs.ioc
src/abs-enc/: .mxproject  CMakeLists.txt  abs-enc.ioc
src/adc-test/: .mxproject
src/as5047u-testbed/: .mxproject  CMakeLists.txt  STM32G431XX_FLASH.ld  as5047u-testbed.ioc
src/blmc/: CMakeLists.txt  STM32G474XX_FLASH.ld  blmc.ioc
src/bmc/: .mxproject  CMakeLists.txt  CMakePresets.json  STM32G431XX_FLASH.ld  bmc.ioc  build.sh
src/canalyzer/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Dockerfile  README.md  TODO.txt  canalyzer.ioc  canalyzer_config.yaml  compose.yaml  driver.cpp  logger.cpp  logger_start.yaml  setup.sh  setup_vcan.sh  setup_vibe.sh
src/canalyzer/Core/: Dockerfile  canalyzer_config.yaml
src/canalyzer/Core/Inc/: logger.hpp  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
src/canalyzer/Core/Src/: canalyzer.cpp  logger.cpp  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
src/canalyzer/can_code/: CMakeLists.txt  Dockerfile  canalyzer_config.yaml  cmake_help.txt  driver  driver.cpp  logger.cpp  logger.hpp  logger_start.yaml  test.cpp
src/canalyzer/can_code/inc/: logger.hpp
src/canalyzer/can_code/src/: Yaml.cpp  Yaml.hpp  driver.cpp  influxdb.hpp  logger.cpp  logger.hpp
src/canalyzer/can_code/tests/: CMakeLists.txt  test.cpp  test_factory  test_factory.cpp
src/canalyzer/scripts/: clear_can_log.sh  clear_vcan.sh  createVCAN.sh  dockerBuld.sh  setup.sh  setup_vcan.sh  setup_vibe.sh  start.sh  systemd.service  test.sh
tools/: CMakeLists.txt  pyproject.toml  setup_venv.py
tools/esw/: __init__.py
tools/esw/bmc/: config.py
tools/esw/can/: canbus.py
tools/esw/can/dbc/: __init__.py  parser.py
tools/esw/config/: generator.py  parser.py  types.py
tools/esw/cubemx/: __init__.py  cmake.py  generation.py  packages.py
tools/esw/dbc/: hpp_generator.py  parser.py
tools/esw/stlink/: __init__.py  serial.py
tools/esw/visualization/: async_plotter.py  pid_plot.py
tools/scripts/: abs_can.py  abs_zero.py  bmc.yaml  bmc_config.py  can_header_gen.py  config.py  config_gen.py  generate_project.py  gripper.yaml  list_available_mcus.py  monitor.py  restart_bmc.py  send_can.py  update_cmake_cfg.py  write_gains.py
(+409 files in other folders)
